# RiceHealthAI

./: .gitignore  README.md  pyproject.toml
configs/: data_config.yaml  model_config.yaml  training_config.yaml
notebooks/: 02_preprocessing.ipynb
src/ricehealthai/core/: settings.py  utils.py
src/ricehealthai/infrastructure/: __init__.py  data_loader.py  data_splitter.py  dataset.py  image_transformer.py  logger.py
src/ricehealthai/infrastructure/models/: custom_cnn.py
